[project]
name = "job_controller"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "kubernetes==25.3.0",
    "psycopg2==2.9.6",
    "SQLAlchemy==2.0.13",
    "pika==1.3.2"
]

[project.urls]
"Repository" = "https://github.com/interactivereduction/jobcontroller"

[project.scripts]
jobcontroller = "job_controller.main:main"

[project.optional-dependencies]
formatting = [
    "toml==0.10.2",
    "black==23.11.0",
]

test = [
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-random-order==1.1.0"
]

code-inspection = [
    "pylint==2.17.4",
    "mypy==1.8.0",
    "sqlalchemy-stubs==0.4",
    "job_controller[test]",
    "types-requests==2.31.0.10"
]

[tool.setuptools]
packages = ["job_controller"]
