[project]
name = "job_controller"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "kubernetes==29.0.0",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.28",
    "pika==1.3.2"
]

[project.urls]
"Repository" = "https://github.com/interactivereduction/jobcontroller"

[project.scripts]
jobcontroller = "job_controller.main:main"

[project.optional-dependencies]
formatting = [
    "toml==0.10.2",
    "black==24.2.0",
]

test = [
    "pytest==8.1.1",
    "pytest-cov==4.1.0",
    "pytest-random-order==1.1.1"
]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.9.0",
    "sqlalchemy-stubs==0.4",
    "job_controller[test]",
    "types-requests==2.31.0.20240311"
]

[tool.setuptools]
packages = ["job_controller"]
