[project]
name = "jobcreator"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "kubernetes==29.0.0",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.30",
    "pika==1.3.2"
]

[project.urls]
"Repository" = "https://github.com/fiaisis/jobcontroller"

[project.scripts]
jobcreator = "jobcreator.main:main"

[project.optional-dependencies]
formatting = [
    "toml==0.10.2",
    "black==24.4.2",
]

test = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "pytest-random-order==1.1.1"
]

code-inspection = [
    "pylint==3.2.2",
    "mypy==1.10.0",
    "sqlalchemy-stubs==0.4",
    "types-requests==2.32.0.20240521"
]

[tool.setuptools]
packages = ["jobcreator", "jobcreator.database"]
