[project]
name = "jobwatcher"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "kubernetes==29.0.0",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.30",
]

[project.urls]
"Repository" = "https://github.com/fiaisis/jobcontroller"

[project.scripts]
jobwatcher = "jobwatcher.main:main"

[project.optional-dependencies]
formatting = [
    "toml==0.10.2",
    "black==24.4.2",
]

test = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-random-order==1.1.1"
]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.10.0",
    "sqlalchemy-stubs==0.4",
    "types-requests==2.31.0.20240406"
]

[tool.setuptools]
packages = ["jobwatcher", "jobwatcher.database"]
